# react-flask

./: README.md
backend/: app.py  pyproject.toml
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  SpeakerProfile.jsx  db.json
frontend/src/SearchSpeaker/: SearchSpeaker.jsx
frontend/src/components/ContextExample/: ContextExample.jsx
frontend/src/components/Counter/: Counter.jsx
frontend/src/components/DBUseReducer/: DBUseReducer.jsx
frontend/src/components/Dashboard/: Dashboard.jsx
frontend/src/components/DeliverData/: DeliverData.jsx
frontend/src/components/SearchSpeaker/: SearchSpeaker.jsx
