[project]
name = "backend"
version = "0.1.0"
description = "Backend for a fullstack Flask-React web development project"
authors = [
    {name = "Juliano"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "python-dotenv"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
